components dinamycs propertys

--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -2,11 +2,11 @@
   <div class="container__small-card-content">
     <div class="small-card__photo">
       <img
-        src="https://imgs.search.brave.com/R131bHkDKqbz94M8fvUhDpvBBIkzXaAkpHgxUvnRUnw/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9sZWdh/ZG9kYW1hcnZlbC5j/b20uYnIvd3AtY29u/dGVudC91cGxvYWRz/LzIwMjMvMDMvU2Vy/aWVzLWRhLU1hcnZl/bC1lbS0yMDIzLWdh/bmhhbS1ub3Zhcy1k/YXRhcy1kZS1lc3Ry/ZWlhLW5hLURpc25l/eS1sZWdhZG9kYW1h/cnZlbC53ZWJw"
+        src="{{photoCover}}"
         alt="">
     </div>
     <div class="small-card__title">
-      <h1><a href="#">Saiu a nova versão do Angular</a></h1>
+      <h1><a href="#">{{CardTitle}}</a></h1>
     </div>
   </div>
   <div class="container__small-card__separator">
