--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,12 +5,21 @@
 
 <div class="container__articles">
   <div class="articles__main">
-    <app-big-card></app-big-card>
+    <app-big-card
+      photoCover="https://imgs.search.brave.com/14Hl91ntNobrpTbVawXn_CuVlGVPl5O387CydPiHP40/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9sZWdh/ZG9kYW1hcnZlbC5j/b20uYnIvd3AtY29u/dGVudC91cGxvYWRz/LzIwMjMvMDcvbGVn/YWRvZGFtYXJ2ZWwt/aG9tZW0tZGUtZmVy/cm8td2hhdC1pZi1u/b3ZhLWFybWFkdXJh/LndlYnA"
+      cardTitle="Novo Homem de Ferro Anunciado"
+      cardDescription="Marvel Studios anuncia novo filme do homem de ferro"></app-big-card>
   </div>
 
   <div class="articles__others">
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
+    <app-small-card
+      photoCover="https://imgs.search.brave.com/R131bHkDKqbz94M8fvUhDpvBBIkzXaAkpHgxUvnRUnw/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9sZWdh/ZG9kYW1hcnZlbC5j/b20uYnIvd3AtY29u/dGVudC91cGxvYWRz/LzIwMjMvMDMvU2Vy/aWVzLWRhLU1hcnZl/bC1lbS0yMDIzLWdh/bmhhbS1ub3Zhcy1k/YXRhcy1kZS1lc3Ry/ZWlhLW5hLURpc25l/eS1sZWdhZG9kYW1h/cnZlbC53ZWJw"
+      CardTitle="Novas series da marvel anunciadas no disney+"></app-small-card>
+    <app-small-card
+      photoCover="https://imgs.search.brave.com/3faqB5Th7T1rhjUpSXnxX-7IfiDtAxsbeCjiUm540sw/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9sZWdh/ZG9kYW1hcnZlbC5j/b20uYnIvd3AtY29u/dGVudC91cGxvYWRz/LzIwMjIvMDYvdmlu/Z2Fkb3Jlcy01LWhv/bWVtLWRlLWZlcnJv/LWNhcGl0YW8tYW1l/cmljYS12aXV2YS1u/ZWdyYS1sZWdhZG9k/YW1hcnZlbC5qcGcu/d2VicA"
+      CardTitle="Porque eles sairam da marvel?"></app-small-card>
+    <app-small-card
+      photoCover="https://imgs.search.brave.com/lmHMrwurFHtXs4eE2GH8B76UYTZwThBeurBi4c4jFXc/rs:fit:860:0:0/g:ce/aHR0cHM6Ly91cGxv/YWRzLmpvdmVtbmVy/ZC5jb20uYnIvd3At/Y29udGVudC91cGxv/YWRzLzIwMjMvMDYv/YXJhbmhhdmVyc29f/Ml9ob21lbV9hcmFu/aGFfMjA5OV9fNGow/M3BsbTB6LTc2MHg0/MjguanBn"
+      CardTitle="Novo filme do homem aranha é um sucesso mundial"></app-small-card>
   </div>
 </div>
