--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -6,7 +6,7 @@
         alt="">
     </div>
     <div class="small-card__title">
-      <h1><a href="#">{{CardTitle}}</a></h1>
+      <h1><a [routerLink]="['content', Id]">{{CardTitle}}</a></h1>
     </div>
   </div>
   <div class="container__small-card__separator">
