--- a/src/app/pages/content/content.component.html
+++ b/src/app/pages/content/content.component.html
@@ -10,8 +10,8 @@
     <hr>
   </div>
   <div class="content__description">
-    <a [routerLink]="['']">
-      << VOLTAR</a>
+    <a [routerLink]="['']" class="btn">
+      <i class="fa-solid fa-backward"></i> VOLTAR</a>
     <p>{{contentDescription}}
     </p>
   </div>
